--- a/app/src/main/res/layout/item_video_play.xml
+++ b/app/src/main/res/layout/item_video_play.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <bbs.cehome.widget.FullWindowVideoView
-        android:id="@+id/mini_surface_view"
+        android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
