--- a/app/src/main/res/layout/item_video_play.xml
+++ b/app/src/main/res/layout/item_video_play.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
 
-    <bbs.cehome.widget.FullWindowVideoView
+    <com.yang.dyvideo.widget.FullWindowVideoView
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
