单击播放 双击点赞

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -43,21 +43,21 @@
 
 
     <string-array name="data_player">
-        <item>http://jzvd.nathen.cn/c494b340ff704015bb6682ffde3cd302/64929c369124497593205a4190d7d128-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/63f3f73712544394be981d9e4f56b612/69c5767bb9e54156b5b60a1b6edeb3b5-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/b201be3093814908bf987320361c5a73/2f6d913ea25941ffa78cc53a59025383-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/d2438fd1c37c4618a704513ad38d68c5/68626a9d53ca421c896ac8010f172b68-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/25a8d119cfa94b49a7a4117257d8ebd7/f733e65a22394abeab963908f3c336db-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/7512edd1ad834d40bb5b978402274b1a/9691c7f2d7b74b5e811965350a0e5772-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/c6e3dc12a1154626b3476d9bf3bd7266/6b56c5f0dc31428083757a45764763b0-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/c494b340ff704015bb6682ffde3cd302/64929c369124497593205a4190d7d128-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/63f3f73712544394be981d9e4f56b612/69c5767bb9e54156b5b60a1b6edeb3b5-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/b201be3093814908bf987320361c5a73/2f6d913ea25941ffa78cc53a59025383-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/d2438fd1c37c4618a704513ad38d68c5/68626a9d53ca421c896ac8010f172b68-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/25a8d119cfa94b49a7a4117257d8ebd7/f733e65a22394abeab963908f3c336db-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/7512edd1ad834d40bb5b978402274b1a/9691c7f2d7b74b5e811965350a0e5772-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/c6e3dc12a1154626b3476d9bf3bd7266/6b56c5f0dc31428083757a45764763b0-5287d2089db37e62345123a1be272f8b.mp4</item>
-        <item>http://jzvd.nathen.cn/c6e3dc12a1154626b3476d9bf3bd7266/6b56c5f0dc31428083757a45764763b0-5287d2089db37e62345123a1be272f8b.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/02/04/mp4/190204084208765161.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/21/mp4/190321153853126488.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319222227698228.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319212559089721.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/18/mp4/190318231014076505.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/02/04/mp4/190204084208765161.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/21/mp4/190321153853126488.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319222227698228.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319212559089721.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/18/mp4/190318231014076505.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/02/04/mp4/190204084208765161.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/21/mp4/190321153853126488.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319222227698228.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/19/mp4/190319212559089721.mp4</item>
+        <item>http://vfx.mtime.cn/Video/2019/03/18/mp4/190318231014076505.mp4</item>
     </string-array>
 
 </resources>
